--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tabler/icons-react": "^3.31.0",
     "autoprefixer": "^10.4.21",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.4.11",
     "lucide-react": "^0.477.0",
     "motion": "^12.11.3",
     "next": "15.2.1",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.0",
     "postcss": "^8.5.3",
     "prisma": "^6.8.2",
     "qss": "^3.0.0",
@@ -49,9 +53,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.17.46",
+    "@types/pg": "^8.15.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
